--- a/index.html
+++ b/index.html
@@ -5,61 +5,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./Assets/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
+    <header class="herb-header">
+      <h1>Herb M. Sneed</h1>
+      <nav>
+        <a href="" target="_blank">ABOUT ME</a>
+        <a href="" target="_blank">WORK</a>
+        <a href="" target="_blank">CONTACT ME</a>
+        <a href="" target="_blank">RESUME</a>
+      </nav>
+    </header>
 
-      <header class="herb">
-        <h1>Herb M. Sneed</h1>
-        <nav>
-          <a>About Me</a>
-          <a>Work</a>
-          <a>Contact Me</a>
-          <a>Resume</a>
-        </nav>
-      </header>
+    <section class="banner">
+        <img src="Assets/Images/Converted/herb-profile.jpg" alt="herb on a boat" width="275" height="250"/>
+      <p>Cool Subtitle Here!</p>
+    </section>
 
-      <section class="banner">
-        <p>Cool Subtitle Here!</p>
-      </section>
-      
     <main>
       <section class="about-me">
-        <h1>About <br>Me<br></h1>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque,
-          aliquid facere laborum architecto eos vitae quas ipsum consectetur
-          alias delectus minus inventore repellat soluta ea sequi cumque iste
-          nobis hic. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Itaque, aliquid facere laborum architecto eos vitae quas ipsum
-          consectetur alias delectus minus inventore repellat soluta ea sequi
-          cumque iste nobis hic.
-        </p>
+        <div>
+          <h1>ABOUT <br/>ME<br/></h1>
+        </div>
+
+        <div>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque,
+            aliquid facere laborum architecto eos vitae quas ipsum consectetur
+            alias delectus minus inventore repellat soluta ea sequi cumque iste
+            nobis hic. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Itaque, aliquid facere laborum architecto eos vitae quas ipsum
+            consectetur alias delectus minus inventore repellat soluta ea sequi
+            cumque iste nobis hic.
+          </p>
+        </div>
       </section>
 
       <section class="work">
-        <h1>Work</h1>
-        <section class="work-flex">
-          <div class="d1"></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </section>
-      </section>
-
-      <section class="contact-me">
-        <h1>Contact <br>Me<br></h1>
         <div>
-          <nav>
-            <a>323-439-9732</a>
-            <a>hmsneed@gmail.com</a>
-            <a>GitHub</a>
-            <a>Twitter</a>
-            <a>Spotify</a>
-          </nav>
+          <h1>WORK</h1>
+        </div>
+
+        <div class="work-flex">
+          <div class="big-div"></div>
+          <div class="lil-div"></div>
+          <div class="lil-div"></div>
+          <div class="lil-div"></div>
+          <div class="lil-div"></div>
         </div>
       </section>
+
+      <footer class="contact-me">
+        <div>
+        <h1>CONTACT<br>ME<br></h1>
+        </div>
+        
+        <div class="nav-box">
+          <nav>
+            <a>323-439-9732</a>
+            <a>HMSNEED@GMAIL.COM</a>
+            <a>GITHUB</a>
+            <a>TWITTER</a>
+            <a>SPOTIFY</a>
+          </nav>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
