--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Herb Sneed</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="./Assets/reset.css" />
     <link rel="stylesheet" type="text/css" href="./Assets/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
@@ -21,7 +22,7 @@
     </header>
 
     <section class="banner">
-        <img src="Assets/Images/Converted/herb-profile.jpg" alt="herb on a boat" width="275" height="250"/>
+        <!-- <img src="Assets/Images/herb-profile.jpg" alt="herb on a boat"/> -->
       <p>Cool Subtitle Here!</p>
     </section>
 
@@ -39,6 +40,13 @@
             nobis hic. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
             Itaque, aliquid facere laborum architecto eos vitae quas ipsum
             consectetur alias delectus minus inventore repellat soluta ea sequi
+            cumque iste nobis hic.<br><br>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque,
+            aliquid facere laborum architecto eos vitae quas ipsum consectetur
+            alias delectus minus inventore repellat soluta ea sequi cumque iste
+            nobis hic. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Itaque, aliquid facere laborum architecto eos vitae quas ipsum
+            consectetur alias delectus minus inventore repellat soluta ea sequi
             cumque iste nobis hic.
           </p>
         </div>
@@ -50,16 +58,53 @@
         </div>
 
         <div class="work-flex">
-          <div class="big-div"></div>
-          <div class="lil-div"></div>
-          <div class="lil-div"></div>
-          <div class="lil-div"></div>
-          <div class="lil-div"></div>
-        </div>
-      </section>
+          <div class="work-div project-1">
 
-      <footer class="contact-me">
-        <div>
+            <div class="workheader">
+              <h2>Surf</h2>
+              <h3>MERN Stack</h3>
+            </div>
+          <img src="Assets/Images/herb-surf-01.jpg" width="600px" height="600px">
+          </div>
+
+          <div class="work-div project-2">
+            <div class="workheader">
+              <h2>LED Wall</h2>
+              <h3>Node - IoT</h3>
+            </div>
+            <img src="Assets/Images/herb-LED.webp">
+          </div>
+
+          <div class="work-div project-3">
+            <div>
+              <!-- <h2>Calculator</h2>
+              <h3>React - Java Script - CSS</h3> -->
+            </div>
+            <img>
+          <img>
+          </div>
+
+          <div class="work-div project-4">
+            <div class="workheader">
+              <!-- <h2>Pastel Puzzles</h2>
+              <h3>MERN Stack</h3> -->
+            </div>
+          <img>
+          </div>
+
+          <div class="work-div project-5">
+            <div class="workheader">
+              <!-- <h2>Run Buddy</h2>
+              <h3>HTML CSS</h3> -->
+            <img>
+            </div>
+          </div>
+        </div>      
+      </section>
+    </main>
+
+    <footer class="contact-me">
+        <!-- <div>
         <h1>CONTACT<br>ME<br></h1>
         </div>
         
@@ -71,8 +116,7 @@
             <a>TWITTER</a>
             <a>SPOTIFY</a>
           </nav>
-        </div>
-      </footer>
-    </main>
+        </div> -->
+    </footer>
   </body>
 </html>
