--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2>Surf Report</h2>
                 <h3>MERN Stack</h3>
               </div>
-            <a href="../Sub-Pages/surf-report.html">
+            <a href="Sub-Pages/surf-report.html">
               <img src="Assets/Images/herb-surf-01.jpg" alt="guy surfing">
             </a>
             </div>
@@ -65,7 +65,7 @@
               <h2>LED Wall</h2>
               <h3>Node - IoT</h3>
             </div>
-            <a href="../Sub-Pages/led-wall.html">
+            <a href="Sub-Pages/led-wall.html">
               <img src="Assets/Images/herb-LED.webp" alt="image of LED Wall">
             </a>
           </div>
@@ -75,7 +75,7 @@
               <h2>Calculator</h2>
               <h3>React - Java Script - CSS</h3>
             </div>
-            <a href="../Sub-Pages/calculator.html">
+            <a href="Sub-Pages/calculator.html">
               <img src="Assets/Images/herb-Calculator.jpeg" width="400px" height="250px" alt="image of calculator">
             </a>
           </div>
@@ -85,7 +85,7 @@
               <h2>Pastel Puzzles</h2>
               <h3>MERN Stack</h3>
             </div>
-            <a href="../Sub-Pages/pastel-puzzles.html">
+            <a href="Sub-Pages/pastel-puzzles.html">
               <img src="Assets/Images/herb-puzzle.jpeg">
             </a>
           </div>
@@ -95,7 +95,7 @@
               <h2>Run Buddy</h2>
               <h3>HTML CSS</h3>
             </div>
-            <a href="../Sub-Pages/run-buddy.html">           
+            <a href="Sub-Pages/run-buddy.html">           
               <img src="Assets/Images/herb_Run.jpeg">
             </a>
           </div>
