04Apr23 Fixing issues with mobile  responsive viewing

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Paragraph telling the user about the developer -->
         <div>
           <p>
-            My name is Herb Sneed.  I'm a veteran of the United States Air Force, where I served in North Carolina, Saudi Arabia and South Korea.  After my enlistment, I enrolled into College at East Carolina University were I majored in Mass Communication with a focus in Media Production.  Upon graduation, I moved to Atlanta, Georgia where I produced content for non-profits and start-up production companies.  After four years I moved to San Francisco and attend the Academy of Art Univesity and earned a MFA in Film; focusing in Film Editing and Visual Effects.  Once I graduated, I relocated to Los Angeles and worked for nearly 10 years on shows like, Big Brother, Ridiculousness, A Million Little Things and RuPaul Drag Race; just to name a few.  Looking for something new and exciting I decided to take a stab at software development and enrolled into the UNC Chapel Hill Coding Bootcamp. 
+            My name is Herb Sneed.  I'm a veteran of the United States Air Force, where I served in North Carolina, Saudi Arabia and South Korea.  After my enlistment, I enrolled into East Carolina University were I majored in Mass Communication with a focus in Media Production.  Upon graduation in 2006, I moved to Atlanta, Georgia where I produced content for non-profits and start-up companies.  After four years in Atlanta I moved to San Francisco and attended the Academy of Art Univesity and earned a MFA in Film; focusing in Film Editing and Visual Effects.  Once I graduated, I relocated to Los Angeles and worked for nearly 10 years in the entertainment industry on shows like, Big Brother, Ridiculousness, A Million Little Things and RuPaul Drag Race; just to name a few.  Looking for something new and exciting I decided to take a stab at software development and enrolled into the UNC Chapel Hill Coding Bootcamp. 
           </p>
         </div>
       </section>
@@ -55,7 +55,7 @@
                 <h2>Surf Report</h2>
                 <h3>MERN Stack</h3>
               </div>
-            <a href="Sub-Pages/surf-report.html">
+            <a href="../Sub-Pages/surf-report.html">
               <img src="Assets/Images/herb-surf-01.jpg" alt="guy surfing">
             </a>
             </div>
