4 April 23 fixing home links on Sub Pages

--- a/Sub-Pages/pastel-puzzles.html
+++ b/Sub-Pages/pastel-puzzles.html
@@ -13,7 +13,9 @@
   <body>
     <h1>Pastel Puzzles</h1>
     <h2>COMING SOON</h2>
-    <button onclick="window.location.href = '/index.html'">HOME</button>
+    <a href="/index.html">
+    <button>HOME</button>
+    </a>
   </body>
 
 </html>
