--- a/Sub-Pages/led-wall.html
+++ b/Sub-Pages/led-wall.html
@@ -13,7 +13,9 @@
   <body>
     <h1>LED Wall</h1>
     <h2>COMING SOON</h2>
-    <button onclick="window.location.href = '/index.html'">HOME</button>
+    <a href="/index.html">
+      <button>HOME</button>
+    </a>
   </body>
 
 </html>
