--- a/Sub-Pages/surf-report.html
+++ b/Sub-Pages/surf-report.html
@@ -12,7 +12,9 @@
   <body>
     <h1>Surf Report</h1>
     <h2>COMING SOON</h2>
-    <button onclick="window.location.href = '/index.html'">HOME</button>
+    <a href="/index.html">
+      <button>HOME</button>
+    </a>
   </body>
 
 </html>
