link editing for git hub

--- a/Sub-Pages/pastel-puzzles.html
+++ b/Sub-Pages/pastel-puzzles.html
@@ -4,8 +4,8 @@
     <title>Pastel Puzzles</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./Assets/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./Assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
   </head>
