--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Herb Sneed</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./Assets/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./Assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
   </head>
 
@@ -18,13 +18,13 @@
         <a href="#about-me" target="_blank">ABOUT ME</a>
         <a href="#work" target="_blank">WORK</a>
         <a href="#contact-me" target="_blank">CONTACT ME</a>
-        <a href="../Assets/Documents/herbsneed-2023-resume.pdf" alt="resume pdf" download="Herb Sneed Resume">RESUME</a>
+        <a href="../assets/documents/herbsneed-2023-resume.pdf" alt="resume pdf" download="Herb Sneed Resume">RESUME</a>
       </nav>
     </header>
 
 <!-- Banner -->
     <section class="banner">
-      <img src="Assets/Images/herb-avatar.png" alt="Herb's Profile Picture"/>
+      <img src="assets/images/herb-avatar.png" alt="Herb's Profile Picture"/>
       <p>“Old ways don't open new doors.”</p>
     </section>
 
@@ -55,8 +55,8 @@
                 <h2>Surf Report</h2>
                 <h3>MERN Stack</h3>
               </div>
-            <a href="Sub-Pages/surf-report.html">
-              <img src="Assets/Images/herb-surf-01.jpg" alt="guy surfing">
+            <a href="sub-Pages/surf-report.html">
+              <img src="assets/images/herb-surf-01.jpg" alt="guy surfing">
             </a>
             </div>
 
@@ -65,8 +65,8 @@
               <h2>LED Wall</h2>
               <h3>Node - IoT</h3>
             </div>
-            <a href="Sub-Pages/led-wall.html">
-              <img src="Assets/Images/herb-LED.webp" alt="image of LED Wall">
+            <a href="sub-pages/led-wall.html">
+              <img src="assets/images/herb-LED.webp" alt="image of LED Wall">
             </a>
           </div>
 
@@ -75,8 +75,8 @@
               <h2>Calculator</h2>
               <h3>React - Java Script - CSS</h3>
             </div>
-            <a href="Sub-Pages/calculator.html">
-              <img src="Assets/Images/herb-Calculator.jpeg" width="400px" height="250px" alt="image of calculator">
+            <a href="sub-pages/calculator.html">
+              <img src="assets/images/herb-Calculator.jpeg" width="400px" height="250px" alt="image of calculator">
             </a>
           </div>
 
@@ -85,8 +85,8 @@
               <h2>Pastel Puzzles</h2>
               <h3>MERN Stack</h3>
             </div>
-            <a href="Sub-Pages/pastel-puzzles.html">
-              <img src="Assets/Images/herb-puzzle.jpeg">
+            <a href="sub-pages/pastel-puzzles.html">
+              <img src="assets/images/herb-puzzle.jpeg">
             </a>
           </div>
 
@@ -95,8 +95,8 @@
               <h2>Run Buddy</h2>
               <h3>HTML CSS</h3>
             </div>
-            <a href="Sub-Pages/run-buddy.html">           
-              <img src="Assets/Images/herb_Run.jpeg">
+            <a href="sub-pages/run-buddy.html">           
+              <img src="assets/images/herb_Run.jpeg">
             </a>
           </div>
         </div>      
