--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2>Surf Report</h2>
                 <h3>MERN Stack</h3>
               </div>
-            <a href="sub-Pages/surf-report.html">
+            <a href="sub-pages/surf-report.html">
               <img src="assets/images/herb-surf-01.jpg" alt="guy surfing">
             </a>
             </div>
