--- a/sub-pages/surf-report.html
+++ b/sub-pages/surf-report.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Surf Report</h1>
     <h2>COMING SOON</h2>
-    <a href="./index.html">
+    <a href="../index.html">
       <button>HOME</button>
     </a>
   </body>
