--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#about-me" target="_blank">ABOUT ME</a>
         <a href="#work" target="_blank">WORK</a>
         <a href="#contact-me" target="_blank">CONTACT ME</a>
-        <a href="../assets/documents/herbsneed-2023-resume.pdf" alt="resume pdf" download="Herb Sneed Resume">RESUME</a>
+        <a href="../assets/documents/herbsneed-2023-resume.pdf" alt="resume pdf" download="herbsneed-2023-resume.pdf">RESUME</a>
       </nav>
     </header>
 
