adding City Snap

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
           <div class="work-flex">
             <div class="work-div project-1">
               <div>
-                <h2>Surf Report</h2>
-                <h3>MERN Stack</h3>
+                <h2>City Snap</h2>
+                <h3>JS | Tailwind CSS | JQuery</h3>
               </div>
             <a href="https://ilirhajdari.github.io/city-snap/" target="_blank">
-              <img src="assets/images/herb-surf-01.jpg" alt="guy surfing">
+              <img src="assets/images/herb-city-snap.png" alt="image of globe">
             </a>
             </div>
 
