adding alt for Project 1

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h3>JS | Tailwind CSS | JQuery</h3>
               </div>
             <a href="https://ilirhajdari.github.io/city-snap/" target="_blank">
-              <img src="assets/images/herb-city-snap.png" alt="guy surfing">
+              <img src="assets/images/herb-city-snap.png" alt="image of globe">
             </a>
             </div>
 
