fixed file path for home button on sub-pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <h2>LED Wall</h2>
               <h3>Node - IoT</h3>
             </div>
-            <a href="sub-pages/led-wall.html">
+            <a href="sub-pages/led-wall.html" target="_blank">
               <img src="assets/images/herb-LED.webp" alt="image of LED Wall">
             </a>
           </div>
@@ -75,17 +75,17 @@
               <h2>Calculator</h2>
               <h3>React - Java Script - CSS</h3>
             </div>
-            <a href="sub-pages/calculator.html">
+            <a href="sub-pages/calculator.html" target="_blank">
               <img src="assets/images/herb-Calculator.jpeg" width="400px" height="250px" alt="image of calculator">
             </a>
           </div>
 
-          <div class="work-div project-4">
+          <div class="work-div project-4" >
             <div>
               <h2>Pastel Puzzles</h2>
               <h3>MERN Stack</h3>
             </div>
-            <a href="sub-pages/pastel-puzzles.html">
+            <a href="sub-pages/pastel-puzzles.html" target="_blank">
               <img src="assets/images/herb-puzzle.jpeg">
             </a>
           </div>
@@ -95,7 +95,7 @@
               <h2>Run Buddy</h2>
               <h3>HTML CSS</h3>
             </div>
-            <a href="sub-pages/run-buddy.html">           
+            <a href="sub-pages/run-buddy.html" target="_blank">           
               <img src="assets/images/herb_Run.jpeg">
             </a>
           </div>
