--- a/sub-pages/calculator.html
+++ b/sub-pages/calculator.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Calculator</h1>
     <h2>COMING SOON</h2>
-    <a href="./index.html">
+    <a href="../index.html">
     <button>HOME</button>
     </a>
   </body>
