--- a/sub-pages/led-wall.html
+++ b/sub-pages/led-wall.html
@@ -13,7 +13,7 @@
   <body>
     <h1>LED Wall</h1>
     <h2>COMING SOON</h2>
-    <a href="/index.html">
+    <a href="../index.html">
       <button>HOME</button>
     </a>
   </body>
