--- a/sub-pages/resume.html
+++ b/sub-pages/resume.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Herb's Resume</h1>
     <h2>COMING SOON</h2>
-    <button onclick="window.location.href = '/index.html'">HOME</button>
+    <button onclick="window.location.href = '../index.html'">HOME</button>
   </body>
 
 </html>
